--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -1,20 +1,75 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Garage V.Parrot
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<h1>Bienvenue dans le garage de Vincent Parrot</h1>
+	
+	<div class="container">
+	<h2>Les service proposé</h2>
+		{% for service in services %}
+			<div class="card card-service">
+				<h2>{{ service.name }}</h2>
+				<p>{{ service.description }}</p>
+				<span>{{ service.price }}
+					€</span>
+			</div>
+		{% endfor %}
+	</div>
+	<section class="flyers-sec">
+		<img src="{{ asset('images/basic-wash.png') }}" alt="Mon image de lavage auto" width="400px" class="flyer">
+		<img src="{{ asset('images/basic-wash.png') }}" alt="Mon image de lavage auto" width="400px" class="flyer">
+		<img src="{{ asset('images/basic-wash.png') }}" alt="Mon image de lavage auto" width="400px" class="flyer">
+	</section>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	{# <section class="commentaire">
+		<h3>Commentaire clients</h3>
+		<a href="{{ path('testimony')}}" class="btn">Laisser un avis</a>
+		<div id="carouselExample" class="carousel slide">
+			<div class="carousel-inner">
+				{% for index, testimony in testimonys %}
+					<div class="carousel-item {% if index == 0 %}active{% endif %}">
+						<div class="card card-carousel">
+							<h2>{{ testimony.name }}</h2>
+							<p>{{ testimony.commentaire }}</p>
+							<div class="rating">
+								{% for i in 1..testimony.note %}
+									<i class="fas fa-star"></i>
+								{% endfor %}
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+					<img src="{{asset('images/left-arrow.png')}}" alt=""class="carousel-control-prev-icon" width="30px" aria-hidden="true">
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+					<img src="{{asset('images/right-arrow.png')}}" alt=""class="carousel-control-prev-icon" width="30px" aria-hidden="true">
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+	</section> #}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/jeandicristo/Documents/Site web/EcfGarage/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/jeandicristo/Documents/Site web/EcfGarage/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+	{# <div class="container">
+	    {% for testimony in testimonys %}
+	        <div class="card card-service">
+	            <h2>{{ testimony.name }}</h2>
+	            <p>{{ testimony.commentaire }}</p>
+	            <div class="rating">
+	                {% for i in 1..testimony.note %}
+	                    <i class="fas fa-star"></i>
+	                {% endfor %}
+	            </div>
+	        </div>
+	    {% endfor %}
+	    <div class="navigation">
+	        <span class="arrow arrow-left">&#8592;</span>
+	        <span class="arrow arrow-right">&#8594;</span>
+	    </div>
+	</div> #}
+
 {% endblock %}
