Create form for new product

--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -4,7 +4,6 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Bienvenue dans le garage de Vincent Parrot</h1>
 	
 	<div class="container">
 	<h2>Les service proposé</h2>
@@ -23,7 +22,7 @@
 		<img src="{{ asset('images/basic-wash.png') }}" alt="Mon image de lavage auto" width="400px" class="flyer">
 	</section>
 
-	{# <section class="commentaire">
+	<section class="commentaire">
 		<h3>Commentaire clients</h3>
 		<a href="{{ path('testimony')}}" class="btn">Laisser un avis</a>
 		<div id="carouselExample" class="carousel slide">
@@ -51,7 +50,7 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-	</section> #}
+	</section>
 
 
 	{# <div class="container">
