--- a/templates/pages/product/car.html.twig
+++ b/templates/pages/product/car.html.twig
@@ -17,7 +17,5 @@
         </div>
     </div>
     </div>
-    <script type="module">
-    import noUiSlider from 'nouislider/dist/nouislider.mjs';
-</script>
+    <a href="{{ path('newProduct') }}" class="btn">Créer une offre</a>
 {% endblock %}
