--- a/templates/components/_product.html.twig
+++ b/templates/components/_product.html.twig
@@ -1,5 +1,5 @@
 <div class="card">
-{# <img src="{{ product.image }}" alt="" card-img-top> #}
+<img src="{{ product.image }}" alt="" card-img-top>
 <div class="card-body">
     <h2 class="card-title">{{ product.name}}</h2>
     <div class="card-title text-price">
